--- a/report/source/report.tex
+++ b/report/source/report.tex
@@ -4,36 +4,13 @@
 \usepackage{graphicx}
 \usepackage{glossaries}
 
-\begin{titlepage}
-   \begin{center}
-       \vspace*{1cm}
-
-       \textbf{Thesis Title}
-
-       \vspace{0.5cm}
-        Thesis Subtitle
-            
-       \vspace{1.5cm}
-
-       \textbf{Author Name}
-
-       \vfill
-            
-       A thesis presented for the degree of\\
-       Doctor of Philosophy
-            
-       \vspace{0.8cm}
-     
-       \includegraphics[width=0.4\textwidth]{university}
-            
-       Department Name\\
-       University Name\\
-       Country\\
-       Date
-            
-   \end{center}
-\end{titlepage}
 \begin{document}
+
+\title{Autotweet}
+\author{Mathieu Pionnier, Thomas Chastaingt and Aymerick Valette.}
+\date{19/06/2020}
+
+\maketitle
 
 \tableofcontents{}
 
@@ -43,10 +20,13 @@
 
 This project was created as part of the mobile development course led by Mr. Philipe Esling. Autotweet is a Twitter monitoring and automation system. It is composed of a React Native client and an intermediary server.
 
-\section{Project Management}
+\section{Contributors}
 Three students participated in this project as individual contributors. Mathieu Pionnier is an apprentice at Rami, Thomas Chastaingt at CCI and Aymerick Valette at PayFit. 
 
-The three contributors worked together in a variety of collaboration formats depending on the context. Initially, we tried a workflow consisting of changelists followed by reviews. We quickly realised that it was hard to have a consensus about the project’s base architecture. Changelists were going all over the place without a proper vision. We concluded that it was too early to allow for asynchronous collaboration. We started doing pair-programming sessions to allow for more efficient progression. As a result, we have been able to move faster and communicate better. This workflow also allowed us to review previous changes faster. In parallel to this workflow, the development of the server component was operated solely by Aymerick Valette.
+\section{Workload distribution}
+The three contributors worked together in a variety of collaboration formats depending on the context. Initially, we tried a workflow consisting of changelists followed by reviews. During this period, Mathieu Pionnier did the foundations of the `Workflows' view, Thomas Chastaingt did the foundations of the `Trends' view and Aymerick Valette built the login system. 
+
+We quickly realised that it was hard to have a consensus about the project’s base architecture. Changelists were going all over the place without a proper vision. We concluded that it was too early to allow for asynchronous collaboration. We started doing pair-programming sessions to allow for more efficient progression. As a result, we have been able to move faster and communicate better. This workflow also allowed us to review previous changes faster. In parallel to this workflow, the development of the server component was operated solely by Aymerick Valette.
 
 \clearpage
 
